# sttc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.md
cmake/toolchains/: linux-aarch64.cmake  mingw-w64-x86_64.cmake
include/stt/: app.h  audio.h  cli.h  config.h  cuda_runtime.h  features.h  fs.h  hotkey.h  infer.h  log.h  model.h  model_install.h  safetensors.h  tdt_decode.h  text_x11.h  tokenizer.h  wav.h
src/: app.c  audio.c  cli.c  cuda_runtime.c  features.c  fs.c  hotkey.c  infer.c  infer_stub.c  log.c  main.c  model.c  model_install.c  safetensors.c  tdt_decode.c  text_x11.c  tokenizer.c  wav.c
src/audio/: backend.h  none.c  portaudio.c  pulse.c  recorder.c
src/hotkey/: backend.h  linux_evdev.c  none.c  win32.c
src/text/: backend.h  stdout.c  win32.c  x11.c
tests/: app_tests.c  audio_tests.c  cli_tests.c  hotkey_tests.c  model_tests.c  wav_tests.c
